--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,21 @@
 [package]
-name = "unsafe-libyaml"
-version = "0.2.10"
-authors = ["David Tolnay <dtolnay@gmail.com>"]
-categories = ["encoding", "parser-implementations", "no-std"]
-description = "libyaml transpiled to rust by c2rust"
-documentation = "https://docs.rs/unsafe-libyaml"
+name = "libyaml-safer"
+version = "0.1.0"
+authors = [
+    "Simon Ask Ulsnes <simon@ulsnes.dk",
+    "David Tolnay <dtolnay@gmail.com>",
+]
+categories = [
+    "encoding",
+    "parser-implementations",
+    "no-std",
+]
+description = "Safer libyaml port, based on unsafe-libyaml"
+documentation = "https://docs.rs/libyaml-safer"
 edition = "2021"
 keywords = ["yaml"]
 license = "MIT"
-repository = "https://github.com/dtolnay/unsafe-libyaml"
+repository = "https://github.com/simonask/libyaml-safer"
 rust-version = "1.56"
 
 [workspace]
