Update fuzz testers

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -10,7 +10,7 @@ cargo-fuzz = true
 
 [dependencies]
 libfuzzer-sys = "0.4.7"
-unsafe-libyaml = { path = ".." }
+libyaml-safer = { path = ".." }
 
 [[bin]]
 name = "scan"
